Anfaenge Startseite Desktop

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,114 @@
     />
   </head>
   <body>
-    {{> header }}
-    <h1>Hello World Test!</h1>
     <main>
-      <a href="/sub-page/">Link to Subpage</a>
-      <div>Home</div>
+      <div class="hero">
+        <div class="hero-nav">
+          <img class="hero-logo" src="/images/Group.svg" alt="minimalistic logo with a coffee bean">
+          <p>das Café</p>
+          <p>Herkunft</p>
+          <p>Shop</p>
+          <img class="hero-shop-icon" src="/images/shopicon.svg" alt="shop icon">
+        </div>
+        <h1 class="hero-title">Rustica</h1>
+        <p class="hero-subtitle">Bio und Fair seit 1991</p>
+        <a>zum Shop</a>
+        <!-- <img class="hero-img" src="/images/coffee.jpg?width=1440&format=webp&quality=70" alt="coffee"> -->
+      </div>
+      <div class="info">
+        <img class="info-coffee" src="/images/FEND-Coffee-shop.jpg" alt="das Innere eines Cafes">
+        <h2>Rösterei und Café</h2>
+        <p class="info-text">Kaffee aus Kiel, direkt gehandelt und geröstet in der eigenen Rösterei, serviert im gemütlichen Café in der Innenstadt.</p>
+        <p class="info-ort">Komm vorbei!<br>Fraunhoferstr. 13, Kiel</p>
+        <p class="info-zeit">Mo – Fr 8–18 Uhr<br>Sa 11–18 Uhr</p>
+        
+      </div>
+      <div class="info">
+        <img class="info-plant" src="/images/FEND-coffee-plant.png" alt="eine Kaffeepflanze">
+        <h2>Bio und Fair</h2>
+        <p class="info-text info-text-right">Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die Blindtexte. Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die Blindtexte. Und das alles in bester Bio Qualität</p>
+        <a>mehr</a>
+      </div>
+      <div class="sorten">
+        <h2>Entdecke unsere<br>Kaffee Sorten</h2>
+        <div class="sorten-container">
+            <div class="sorten-kaffee">
+          <img class="" src="/images/FEND_Coffee_Costa-Rica 2.jpg" alt="Kaffeetüte">
+          <p>Costa Rica</p>
+          <p>6,90€-26,90€</p>
+          <img src="/images/Icon Kaffee Bohnen.svg" alt="Icon Kaffeebohnen">
+          <img src="/images/Icon French Press.svg" alt="Icon Kaffeemaschine">
+          <img src="/images/Icon Kaffee Schaufel.svg" alt="Icon Kaffeebohne mit Schaufel">
+          </div>
+          <div class="sorten-kaffee">
+          <img class="" src="/images/FEND_Coffee_Costa-Rica 2.jpg" alt="Kaffeetüte">
+          <p>Äthiopien</p>
+          <p>6,90€-26,90€</p>
+          <img src="/images/Icon Kaffee Bohnen.svg" alt="Icon Kaffeebohnen">
+          <img src="/images/Icon French Press.svg" alt="Icon Kaffeemaschine">
+          <img src="/images/Icon Kaffee Schaufel.svg" alt="Icon Kaffeebohne mit Schaufel">
+          </div>
+          <div class="sorten-kaffee">
+          <img class="" src="/images/FEND_Coffee_Costa-Rica 2.jpg" alt="Kaffeetüte">
+          <p>Costa Rica</p>
+          <p>6,90€-26,90€</p>
+          <img src="/images/Icon Kaffee Bohnen.svg" alt="Icon Kaffeebohnen">
+          <img src="/images/Icon French Press.svg" alt="Icon Kaffeemaschine">
+          <img src="/images/Icon Kaffee Schaufel.svg" alt="Icon Kaffeebohne mit Schaufel">
+          </div>
+          <div class="sorten-kaffee">
+          <img class="" src="/images/FEND_Coffee_Costa-Rica 2.jpg" alt="Kaffeetüte">
+          <p>Äthiopien</p>
+          <p>6,90€-26,90€</p>
+          <img src="/images/Icon Kaffee Bohnen.svg" alt="Icon Kaffeebohnen">
+          <img src="/images/Icon French Press.svg" alt="Icon Kaffeemaschine">
+          <img src="/images/Icon Kaffee Schaufel.svg" alt="Icon Kaffeebohne mit Schaufel">
+          </div>
+        </div> 
+        <a>alle Produkte</a>
+      </div>
+      <!-- Hintergrundbild -->
+      <div class="sack">
+        <p>Weit hinten, hinter den Wortbergen, fern der Länder Vokalien und Konsonantien leben die Blindtexte. Und das alles in bester Bio Qualität.</p>
+        <a>mehr</a>
+      </div>
+      <div>
+        <h2>Das steckt drin</h2>
+        <img class="" src="/images/FEND_Coffee_Costa-Rica 2.jpg" alt="Kaffeetüte">
+        <div>
+          <img class="schaufel" src="/images/Icon Kaffee Tasse.svg" alt="">
+          <p>Bester Geschmack</p>
+        </div>
+        <div>
+          <img class="schaufel" src="/images/Icon Kaffee Schaufel.svg" alt="afff">
+          <p>Fair gehandelt</p>
+        </div>
+        <div>
+          <img src="/images/Icon-Kaffee Pflanze.svg" alt="">
+          <p>Bio Qualität</p>
+        </div>
+        
+        <a href="">zum Shop</a>
+      </div>
+      <div>
+        <h2>Komm vorbei</h2>
+        <img src="/images/Map.jpg" alt="Kartenausschnitt von Google Maps">
+      </div>
     </main>
+    <footer>
+      <div>
+        <img src="/images/Group.svg" alt="Logo">
+      <h3>Rustica</h3>
+      <p>Café & Rösterei</p>
+      </div>
+      <div>
+        <p>Komm uns besuchen!<br>Fraunhoferstr. 13, Kiel</p>
+      <p>Mo – Fr 8–18 Uhr<br>Sa 11–18 Uhr</p>
+      </div>      
+      <p>Café<br>Shop<br>Herkunft</p>
+      <p>Impressum<br>Datenschutz</p>
+
+    </footer>
     <script src="/js/index.js" type="module"></script>
   </body>
 </html>
