--- a/src/sub-page/menue.html
+++ b/src/sub-page/menue.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Subpage</title>
+    <title>menue</title>
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <main>
+    <main class="main">
       
     </main>
     <script src="/js/index.js" type="module"></script>
